# DiceRPC

./: Cargo.toml  README.md
examples/: http_basic.rs  http_batch_requests.rs  http_client.rs  http_full_featured.rs  http_with_auth.rs  http_with_no_auth.rs  http_with_state.rs  production_http.rs  tcp_basic.rs  tcp_client_advanced.rs  tcp_framed.rs  tcp_full_featured.rs  tcp_with_auth.rs  tcp_with_state.rs
scripts/: monitor_metrics.sh  test_all.sh
src/: client.rs  example_full.rs  lib.rs  macros.rs  main.rs  rpc.rs  state.rs
src/client/: client.rs
src/middleware/: auth.rs  mod.rs
src/rpc/: mod.rs  rpc.rs
src/server/: handlers.rs  metrics.rs  mod.rs  server.rs
src/transport/: framing.rs  http_transport.rs  metrics_endpoint.rs  mod.rs  shutdown.rs  tcp.rs
src/util/: batch.rs  mod.rs
tests/: auth_tests.rs  batch_tests.rs  framing_tests.rs  http_integration.rs  integration.rs  metrics_tests.rs  shutdown_tests.rs  state_tests.rs  tcp_integration.rs
