[package]
name = "dice_rpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dice_rpc" 

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

